--- a/app/src/main/res/layout/explore_list_item.xml
+++ b/app/src/main/res/layout/explore_list_item.xml
@@ -7,92 +7,101 @@
 
     </data>
 
-    <androidx.cardview.widget.CardView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="35dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        app:cardCornerRadius="16dp">
+        android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <androidx.cardview.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_margin="16dp"
+            app:layout_constraintHeight_percent="0.8"
+            app:layout_constraintWidth_percent="0.8"
+            app:cardCornerRadius="16dp">
 
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fab_service_icon"
-                android:layout_width="56dp"
-                android:layout_height="56dp"
-                android:layout_margin="30dp"
-                android:elevation="35dp"
-                android:scaleType="center"
-                app:backgroundTint="@color/gray"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:maxImageSize="50dp"
-                app:tint="@null" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/offer_title_text_view"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="30dp"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:fontFamily="@font/poppins_medium"
-                android:textAlignment="center"
-                android:textColor="@color/purple_700"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="@id/fab_service_icon"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/fab_service_icon"
-                app:layout_constraintTop_toTopOf="@id/fab_service_icon"
-                tools:text="Offer Title" />
-
-            <LinearLayout
-                android:id="@+id/status_linear_layout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="16dp"
-                android:orientation="horizontal"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/fab_service_icon">
-
-                <ImageView
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:backgroundTint="@null"
-                    android:layout_gravity="center"
-                    android:background="@null"
-                    android:src="@drawable/filled_circle" />
-
-                <TextView
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/fab_service_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:fontFamily="@font/poppins_bold"
-                    android:textColor="@android:color/black"
+                    android:layout_margin="30dp"
+                    android:elevation="35dp"
+                    android:scaleType="center"
+                    app:backgroundTint="@color/white"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:maxImageSize="40dp"
+                    app:tint="@color/blue" />
+
+                <TextView
+                    android:id="@+id/offer_title_text_view"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="30dp"
+                    android:ellipsize="end"
+                    android:fontFamily="@font/poppins_medium"
+                    android:maxLines="2"
+                    android:textAlignment="center"
+                    android:textColor="@color/purple_700"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="@id/fab_service_icon"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/fab_service_icon"
+                    app:layout_constraintTop_toTopOf="@id/fab_service_icon"
+                    tools:text="Offer Title" />
+
+                <LinearLayout
+                    android:id="@+id/status_linear_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginTop="16dp"
+                    android:orientation="horizontal"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/fab_service_icon">
+
+                    <ImageView
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:layout_gravity="center"
+                        android:background="@null"
+                        android:backgroundTint="@null"
+                        android:src="@drawable/filled_circle" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:fontFamily="@font/poppins_bold"
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp"
+                        tools:text="Open" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/offer_content_text_view"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="16dp"
+                    android:ellipsize="end"
+                    android:fontFamily="@font/poppins_light"
+                    android:maxLines="14"
                     android:textSize="16sp"
-                    tools:text="Open" />
-            </LinearLayout>
+                    android:padding="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/status_linear_layout"
+                    tools:text="Offer Content" />
 
-            <TextView
-                android:id="@+id/offer_content_text_view"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="30dp"
-                android:ellipsize="end"
-                android:fontFamily="@font/poppins_light"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:maxLines="20"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/status_linear_layout"
-                tools:text="Offer Content" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
