--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,5 +23,5 @@
 
     <color name="twitter_blue">#29a5d9</color>
     <color name="green">#ff99cc00</color>
-    <color name="red">#ea4335</color>
+    <color name="red">#ff3232</color>
 </resources>
