--- a/app/src/main/res/layout/explore_list_item.xml
+++ b/app/src/main/res/layout/explore_list_item.xml
@@ -38,7 +38,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:maxImageSize="40dp"
-                    app:tint="@color/blue" />
+                    app:tint="@color/purple_500" />
 
                 <TextView
                     android:id="@+id/offer_title_text_view"
@@ -90,8 +90,9 @@
                     android:layout_height="0dp"
                     android:layout_marginTop="16dp"
                     android:ellipsize="end"
+                    android:gravity="center_vertical"
                     android:fontFamily="@font/poppins_light"
-                    android:maxLines="13"
+                    android:maxLines="5"
                     android:padding="16dp"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
