--- a/app/src/main/res/layout/login_tab_fragment.xml
+++ b/app/src/main/res/layout/login_tab_fragment.xml
@@ -37,6 +37,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/login_email_edit_text"
+                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/edit_text_background"
@@ -62,6 +63,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/login_password_edit_text"
+                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/edit_text_background"
