--- a/app/src/main/res/layout/signup_tab_fragment.xml
+++ b/app/src/main/res/layout/signup_tab_fragment.xml
@@ -38,6 +38,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/signup_name_edit_text"
+                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/edit_text_background"
@@ -64,6 +65,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/signup_email_edit_text"
+                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/edit_text_background"
@@ -91,6 +93,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/signup_password_edit_text"
+                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/edit_text_background"
@@ -118,6 +121,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/signup_conf_password_edit_text"
+                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/edit_text_background"
