--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,7 +13,10 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:textColorHint">#808080</item>
-        <item name="android:editTextColor">@color/black</item>
+    </style>
+    <style name="Widget.MaterialComponents.TextInputEditText.OutlinedBox.Login"
+        parent="Widget.MaterialComponents.TextInputEditText.OutlinedBox">
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Base.Widget.AppCompat.TextView.newOrder" parent="Base.Widget.AppCompat.TextView">
